// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blank text on widget, should be null 1`] = `null`;

exports[`Text widget: Contains html Render widget 1`] = `
<div
  className="survey-section__text"
>
  <div
    dangerouslySetInnerHTML={
      {
        "__html": "<br> bold text</br>blabla",
      }
    }
  />
</div>
`;

exports[`Text widget: Default values Render widget 1`] = `
<div
  className="survey-section__text"
>
  <Markdown
    className="left "
    remarkPlugins={
      [
        [
          "remark-gfm",
          {
            "singleTilde": false,
          },
        ],
      ]
    }
  >
    random text
  </Markdown>
</div>
`;

exports[`Text widget: No html Render widget 1`] = `
<div
  className="survey-section__text"
>
  <Markdown
    className="left "
    remarkPlugins={
      [
        [
          "remark-gfm",
          {
            "singleTilde": false,
          },
        ],
      ]
    }
  >
    &lt;br&gt;text not to be in bold&lt;/br&gt;other
  </Markdown>
</div>
`;

exports[`Text widget: No html, with classes and alignment Render widget 1`] = `
<div
  className="survey-section__text"
>
  <Markdown
    className="right my-class"
    remarkPlugins={
      [
        [
          "remark-gfm",
          {
            "singleTilde": false,
          },
        ],
      ]
    }
  >
    random text
  </Markdown>
</div>
`;

exports[`Widget invisible, should be null 1`] = `null`;
